fix: fix skills on mobile mode

--- a/src/css/media.css
+++ b/src/css/media.css
@@ -164,7 +164,13 @@
         flex-direction: column;
         align-items: center;
     }
-
+    .skills__item{
+        max-width: 100px;
+    }
+    .donut{
+        width: 100px;
+        height: 100px
+    }
 
 }
 
@@ -207,6 +213,18 @@
 
     .example__list li{
         margin-bottom: 1rem;
+    }
+
+    .skills__list{
+        row-gap: 5px;
+    }
+
+    .skills__item{
+        max-width: 50px;
+    }
+    .donut{
+        width: 50px;
+        height: 50px
     }
     
 }
